# kadaie1

./: README.md  pyproject.toml
src/kadaie1/: kadaie_1.py
